# project

./: .gitignore  1  2  Button.cpp  Button.h  CMakeLists.txt  Coordinates.h  CurrentWeatherData.cpp  CurrentWeatherData.h  CurrentWeatherGraphic.cpp  CurrentWeatherGraphic.h  ForecastWeather.cpp  ForecastWeather.h  ForecastWeatherData.cpp  ForecastWeatherData.h  ForecastWeatherGraphic.cpp  ForecastWeatherGraphic.h  Graphic.cpp  Graphic.h  Location.cpp  Location.h  LocationList.cpp  LocationList.h  Makefile  README.md  SavedLocations.cpp  SavedLocations.h  UnitTest.h  User.cpp  User.h  WeatherData.cpp  WeatherData.h  WeatherDataSet.cpp  WeatherDataSet.h  WeatherGraphic.cpp  WeatherGraphic.h  main.cpp  pretty.json  saved_locations.txt  test.cpp  (+2 more)
2.dSYM/Contents/Resources/DWARF/: 2
Input/: OutputTesting.txt
include/: Coordinates.h  CurrentWeatherData.h  CurrentWeatherGraphic.h  ForecastWeatherData.h  ForecastWeatherGraphic.h  Graphic.h  Location.h  LocationList.h  SavedLocations.h  WeatherData.h  WeatherDataSet.h
old/: CMakeLists.txt
src/: Button.cpp  CurrentWeatherData.cpp  ForecastWeatherData.cpp  ForecastWeatherGraphic.cpp  Graphic.cpp  Location.cpp  LocationList.cpp  SavedLocations.cpp  User.cpp  WeatherData.cpp  WeatherDataSet.cpp  WeatherGraphic.cpp  main.cpp
tests/: UnitTest.h
